--- a/odiyan-ui/src/pages/login/login.css
+++ b/odiyan-ui/src/pages/login/login.css
@@ -8,7 +8,8 @@
     border: 0px;
     padding: 15px 30px;
     margin:20px;
-    /* border-radius: 3px; */
+    background-color: #242424;
+    outline:2px solid white;
 }
 
 .scale-btn:hover{
@@ -47,6 +48,7 @@
     padding:20px;
     margin:20px;
     color:white;
+    background-color: #242424;
 }
 
 .or-text-container{
