--- a/odiyan-ui/src/pages/new_chat/new_chat.css
+++ b/odiyan-ui/src/pages/new_chat/new_chat.css
@@ -14,11 +14,15 @@
     flex-direction: row-reverse;
 }
 .new-chat-user-result-box{
-    height:200px;
+    height:100px;
+    display: flex;
 }
 .chat-dialog{
-    margin:auto;
+    position:fixed;
+    top:200px;
     border:0px;
+    background-color: transparent;
+    outline:1px solid whitesmoke;
 }
 
 .chat-dialog-close-btn{
@@ -26,4 +30,22 @@
     background-color: transparent;
     border:0px;
     outline: 1px solid whitesmoke;
+}
+
+.chat-dialog-close-btn:hover{
+    background-color: whitesmoke;
+    color:black;
+}
+
+.chat-dialog-say-hi-btn{
+    padding:10px 20px;
+    background-color: transparent;
+    border:0px;
+    width:100%;
+    outline: 1px solid whitesmoke;
+}
+
+.chat-dialog-say-hi-btn:hover{
+    background-color: whitesmoke;
+    color:black;
 }
