--- a/odiyan-ui/src/pages/header/header.css
+++ b/odiyan-ui/src/pages/header/header.css
@@ -3,6 +3,7 @@
     justify-content: space-between;
     border: 0px;
     border-bottom: 2px solid whitesmoke;
+    height:10vh;
 }
 
 .header-banner-left-container{
