Chat history working fine

--- a/odiyan-ui/src/pages/chatbody/chatleftcomp/chatleftcomponent.css
+++ b/odiyan-ui/src/pages/chatbody/chatleftcomp/chatleftcomponent.css
@@ -5,3 +5,15 @@
     overflow-y: auto;
     border-right:1px solid whitesmoke;
 }
+
+.chat-contact{
+    padding:10px 20px;
+    border:0px;
+    outline: 1px solid whitesmoke;
+}
+
+.chat-contact:hover{
+    background-color: whitesmoke;
+    color: black;
+    cursor: pointer;
+}
