--- a/odiyan-ui/src/pages/chatbody/chatrightcomp/chatrightcomponent.css
+++ b/odiyan-ui/src/pages/chatbody/chatrightcomp/chatrightcomponent.css
@@ -27,3 +27,9 @@
     position:fixed;
     width:75vw;
 }
+
+.chat-history-content-bar{
+    display:flex;
+    flex-direction:column;
+    margin-top:50px
+}
