--- a/odiyan-ui/src/pages/chatbody/chatrightcomp/chatrightcomponent.css
+++ b/odiyan-ui/src/pages/chatbody/chatrightcomp/chatrightcomponent.css
@@ -12,10 +12,10 @@
 }
 .sent{
     display: flex;
+    flex-direction: row-reverse;
 }
 .recieved{
     display: flex;
-    flex-direction: row-reverse;
 }
 
 .chat-history-top-bar{
@@ -32,4 +32,24 @@
     display:flex;
     flex-direction:column;
     margin-top:50px
+}
+
+.message-reply-box-container{
+    display: grid;
+    grid-template-columns: 8fr 2fr;
+    gap: 20px;
+}
+.message-reply-box-container input{
+    padding:10px;
+}
+
+.message-reply-box-parent-container{
+    margin:20px;
+    border: 0px;
+    outline: 1px solid whitesmoke;
+    padding:20px;
+}
+
+.reply-label-container{
+    margin-bottom:10px;
 }
