Added max width to chat box

--- a/odiyan-ui/src/pages/chatbody/chatrightcomp/chatrightcomponent.css
+++ b/odiyan-ui/src/pages/chatbody/chatrightcomp/chatrightcomponent.css
@@ -9,6 +9,8 @@
     padding:10px;
     background-color: whitesmoke;
     color: black;
+    max-width:40vw;
+    word-break: break-all;
 }
 .sent{
     display: flex;
