--- a/odiyan-ui/src/pages/login/login.css
+++ b/odiyan-ui/src/pages/login/login.css
@@ -8,15 +8,16 @@
     border: 0px;
     padding: 15px 30px;
     margin:20px;
-    background-color: #242424;
-    outline:2px solid white;
-}
-
-.scale-btn:hover{
-    cursor: pointer;
     outline: 1px solid white;
     background-color: white;
     color:black;
+    opacity: 0.8;
+}
+
+.scale-btn:hover{
+    opacity: 1;
+    font-weight: bold;
+    cursor: pointer;
 }
 
 .crimson{
