--- a/odiyan-ui/src/pages/chatbody/chatrightcomp/chatrightcomponent.css
+++ b/odiyan-ui/src/pages/chatbody/chatrightcomp/chatrightcomponent.css
@@ -44,6 +44,8 @@
 }
 .message-reply-box-container input{
     padding:10px;
+    background-color: white;
+    color:black;
 }
 
 .message-reply-box-parent-container{
@@ -79,4 +81,17 @@
 
 .conversation-label{
     padding:10px 20px;
+}
+
+.send-message-button{
+    border: 0px;
+    background-color: whitesmoke;
+    color:black;
+    opacity: 0.6;
+}
+
+.send-message-button:hover{
+    opacity: 1;
+    font-weight:bold;
+    cursor: pointer;
 }
