--- a/odiyan-ui/src/pages/header/header.css
+++ b/odiyan-ui/src/pages/header/header.css
@@ -23,14 +23,17 @@
     border: 0px;
     margin-left: 5px;
     margin-right: 5px;
+    color:whitesmoke;
     background-color: transparent;
     outline:2px solid whitesmoke;
+    opacity: 0.8;
 }
 
 .header-btn:hover{
     background-color: whitesmoke;
     color:black;
     cursor:pointer;
+    opacity: 1;
 }
 
 .header-btn:focus{
